--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for App-fsql
 
-0.01    2014-04-17 (SHARYANTO) (not yet released)
+0.01    2014-04-17 (SHARYANTO)
 
         - First release.
