--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-fsql
 
+0.04    2014-04-22 (SHARYANTO)
+
+        - Show format information in --show-schema.
+
+
 0.03    2014-04-22 (SHARYANTO)
 
         - No functional changes.
