--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for App-fsql
 
+0.07    2014-04-29 (SHARYANTO)
+
+        - Add --add (-a) option.
+
+        - Add some tests.
+
+
 0.06    2014-04-29 (SHARYANTO)
 
         [INCOMPATIBLE CHANGES]
