--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for App-fsql
 
+0.11    2014-07-02 (SHARYANTO)
+
+        - No functional changes.
+
+        - [Bugfix] scripts/ or bin/ files need to have something like #!perl and
+          not #!/usr/bin/env perl so it can be replaced to the path of perl when
+          installing [RT#96884]
+
+
 0.10    2014-05-17 (SHARYANTO)
 
         - No functional changes.
