--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-fsql
 
+0.14    2015-01-11 (PERLANCAR)
+
+	- [ux] Be less restrictive: allow arguments when -s.
+
+
 0.13    2015-01-03 (PERLANCAR)
 
 	- No functional changes.
