--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-fsql
 
+0.20    2015-06-30 (PERLANCAR)
+
+	- Support -F NAME:NEWNAME to load function as a new name.
+
+
 0.19    2015-06-28 (PERLANCAR)
 
 	- Add option: --define-function (-D).
