--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.232   2023-12-29  Released-By: PERLANCAR; Urgency: medium
+
+        - Add logging (options: --log-level, --trace, --debug, --verbose,
+          --quiet).
+
+        - Add support for TableData module.
+
+
 0.231   2021-09-10  Released-By: PERLANCAR; Urgency: low
 
         - No functional changes.
