--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.233   2023-12-29  Released-By: PERLANCAR; Urgency: low
+
+        - No functional changes.
+
+        - [doc] Show example for selecting from TableData::* module.
+
+
 0.232   2023-12-29  Released-By: PERLANCAR; Urgency: medium
 
         - Add logging (options: --log-level, --trace, --debug, --verbose,
